# expense-classifier

./: pyproject.toml
expense_classifier/: classifier.py  db.py  env.py  main.py  webdav.py
