[tool.poetry]
name = "expense-classifier"
version = "0.1.0"
description = ""
authors = ["brennoflavio <contato@brennoflavio.com.br>"]
readme = "README.md"
packages = [{include = "expense_classifier"}]

[tool.poetry.dependencies]
python = "^3.10"
webdavclient3 = "^3.14.6"
setuptools = "^68.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
fuzzywuzzy = "^0.18.0"
unidecode = "^1.3.6"
psycopg = {extras = ["binary"], version = "^3.1.9"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
